.gitignory - добавлено игнорирование obj

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # C# Express bin
 v01/table_html/table_html.suo
 v01/table_html/table_html/bin/
+v01/table_html/table_html/obj/
 v01/table_html/table_html/table_html.csproj.user  
 
 # Built application files
