--- a/v01/table_html/table_html/table_html.csproj
+++ b/v01/table_html/table_html/table_html.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{B852F149-E3CE-463B-BAC9-85462F18BECC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>table_html</RootNamespace>
+    <RootNamespace>pl2.table</RootNamespace>
     <AssemblyName>table_html</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -40,9 +40,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="domain\access.cs" />
+    <Compile Include="domain\date.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\domain.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\integer.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\logical.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\character.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\numeric.cs" />
+    <Compile Include="domain\real.cs" />
+    <Compile Include="domain\scheme.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\tuple.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\user.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="scheme\meta\meta.cs" />
+    <Compile Include="scheme\scheme.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="table_html.cs" />
+    <Compile Include="tuple\tuple.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
