--- a/v01/table_html/table_html/table_html.csproj
+++ b/v01/table_html/table_html/table_html.csproj
@@ -56,8 +56,12 @@
     <Compile Include="domain\character.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\numeric.cs" />
-    <Compile Include="domain\real.cs" />
+    <Compile Include="domain\numeric.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\real.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="domain\scheme.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -67,12 +71,19 @@
     <Compile Include="domain\user.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="domain\password.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="domain\keep.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scheme\meta\meta.cs" />
     <Compile Include="scheme\scheme.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="table_html.cs" />
+    <Compile Include="tuple\description.cs" />
     <Compile Include="tuple\tuple.cs">
       <SubType>Component</SubType>
     </Compile>
