--- a/v01/table_html/table_html/table.csproj
+++ b/v01/table_html/table_html/table.csproj
@@ -40,74 +40,115 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dl\db\exception\exception.cs" />
+    <Compile Include="dl\db\read_me.cs" />
+    <Compile Include="dl\exception\exception.cs" />
+    <Compile Include="dl\fs\exception\exception.cs" />
+    <Compile Include="dl\fs\file\exception\exception.cs" />
+    <Compile Include="dl\fs\file\html\exception\exception.cs" />
     <Compile Include="dl\fs\file\html\read_me.cs" />
     <Compile Include="dl\fs\file\read_me.cs" />
-    <Compile Include="dl\scheme\meta\scheme\read_me.cs" />
-    <Compile Include="dl\scheme\read_me.cs" />
+    <Compile Include="dl\fs\file\test\test.cs" />
+    <Compile Include="dl\fs\test\test.cs" />
+    <Compile Include="dl\db\scheme\exception\exception.cs" />
+    <Compile Include="dl\db\scheme\exception\some\exception.cs" />
+    <Compile Include="dl\db\scheme\meta\scheme\read_me.cs" />
+    <Compile Include="dl\db\scheme\read_me.cs" />
     <Compile Include="dl\fs\read_me.cs" />
     <Compile Include="dl\read_me.cs" />
-    <Compile Include="dl\table\header\read_me.cs" />
-    <Compile Include="dl\table\read_me.cs" />
-    <Compile Include="dl\table\tuple\read_me.cs" />
-    <Compile Include="domain\special\access.cs">
+    <Compile Include="dl\db\scheme\test\test.cs" />
+    <Compile Include="dl\db\domain\exception\exception.cs" />
+    <Compile Include="dl\db\domain\read_me.cs" />
+    <Compile Include="dl\db\domain\domain_enum.cs" />
+    <Compile Include="dl\db\domain\debug\debug.cs" />
+    <Compile Include="dl\db\table\exception\exception.cs" />
+    <Compile Include="dl\db\table\header\exception\exception.cs" />
+    <Compile Include="dl\db\table\header\read_me.cs" />
+    <Compile Include="dl\db\table\header\test\test.cs" />
+    <Compile Include="dl\db\table\read_me.cs" />
+    <Compile Include="dl\db\table\test\test.cs" />
+    <Compile Include="dl\db\tuple\read_me.cs" />
+    <Compile Include="dl\test\test.cs" />
+    <Compile Include="dl\db\domain\special\access.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\autoincrement.cs" />
-    <Compile Include="domain\system\datetime.cs">
+    <Compile Include="dl\db\domain\system\autoincrement\autoincrement.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\primary\domain.cs">
+    <Compile Include="dl\db\domain\system\datetime\datetime.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\integer.cs">
+    <Compile Include="dl\db\domain\domain.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\logical.cs">
+    <Compile Include="dl\db\domain\system\integer\integer.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\string.cs">
+    <Compile Include="dl\db\domain\system\logical\logical.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\numeric.cs">
+    <Compile Include="dl\db\domain\system\string\string.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\real.cs">
+    <Compile Include="dl\db\domain\system\numeric\numeric.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\special\scheme.cs">
+    <Compile Include="dl\db\domain\system\real\real.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\elementare\tuple.cs">
+    <Compile Include="dl\db\domain\special\scheme.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\special\user.cs">
+    <Compile Include="dl\db\domain\elementare\tuple\tuple.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\system\password.cs">
+    <Compile Include="dl\db\domain\special\user.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="domain\primary\keep.cs">
+    <Compile Include="dl\db\domain\system\password\password.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="dl\db\domain\primary\keep.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="dl\fs\file\file.cs" />
-    <Compile Include="dl\scheme\meta\bases\bases.cs" />
-    <Compile Include="domain\user\user.cs" />
+    <Compile Include="dl\db\scheme\meta\bases\bases.cs" />
+    <Compile Include="dl\db\domain\user\user.cs" />
+    <Compile Include="exception\exception.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="read_me.cs" />
-    <Compile Include="dl\scheme\meta\tuple\tuple.cs" />
-    <Compile Include="dl\scheme\scheme.cs">
+    <Compile Include="dl\db\scheme\meta\tuple\tuple.cs" />
+    <Compile Include="dl\db\scheme\scheme.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="table_html.cs" />
-    <Compile Include="dl\table\tuple\description.cs" />
-    <Compile Include="dl\table\tuple\tuple.cs">
+    <Compile Include="dl\db\tuple\description.cs" />
+    <Compile Include="dl\db\tuple\tuple.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="context\" />
-    <Folder Include="dl\scheme\meta\scheme\tuple\" />
+    <Folder Include="dl\db\domain\system\autoincrement\exception\" />
+    <Folder Include="dl\db\domain\system\autoincrement\test\" />
+    <Folder Include="dl\db\domain\system\datetime\exception\" />
+    <Folder Include="dl\db\domain\system\datetime\test\" />
+    <Folder Include="dl\db\domain\system\exception\" />
+    <Folder Include="dl\db\domain\system\integer\exception\" />
+    <Folder Include="dl\db\domain\system\integer\test\" />
+    <Folder Include="dl\db\domain\system\logical\exception\" />
+    <Folder Include="dl\db\domain\system\logical\test\" />
+    <Folder Include="dl\db\domain\system\numeric\exception\" />
+    <Folder Include="dl\db\domain\system\numeric\test\" />
+    <Folder Include="dl\db\domain\system\password\exception\" />
+    <Folder Include="dl\db\domain\system\password\test\" />
+    <Folder Include="dl\db\domain\system\real\exception\" />
+    <Folder Include="dl\db\domain\system\real\test\" />
+    <Folder Include="dl\db\domain\system\string\exception\" />
+    <Folder Include="dl\db\domain\system\string\test\" />
+    <Folder Include="dl\db\domain\system\test\" />
+    <Folder Include="dl\db\scheme\meta\scheme\tuple\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
